--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,8 @@
 root = true
 
-# All files
-[*]
-indent_style = space
-
-# Xml files
-[*.xml]
-indent_size = 2
+[*.cs]
+dotnet_style_qualification_for_field = false:suggestion
+dotnet_style_qualification_for_property = false:suggestion
+dotnet_style_qualification_for_method = false:suggestion
+dotnet_diagnostic.CA1822.severity = suggestion
+dotnet_diagnostic.IDE0005.severity = warning
